...
    <string name="text_dialog_general_error_delete_logs">Fatal error deleting logs.</string>
    <string name="text_dialog_general_error_read_log_entries">Fatal error reading log data.</string>
    <string name="text_dialog_general_error_external_root_access">Error accessing external files directory.</string>
    <string name="text_dialog_general_error_external_download_create">Error creating download directory.</string>
    <string name="text_dialog_general_error_external_log_create">Error creating log directory.</string>
    <string name="text_dialog_general_error_external_import_export_create">Error creating directory for import or export.</string>
    <string name="text_dialog_general_error_list_folder_files">Fatal error reading file list from folder.</string>
    <string name="text_dialog_general_error_file_access">Fatal file error.</string>
    <string name="text_dialog_general_error_db_purge">An error occurred resetting the configuration. Please try to delete the app data from the Android settings.</string>
    <string name="text_dialog_general_error_config_import">An error occurred importing the configuration. Some settings may have been imported.</string>
    <string name="text_dialog_general_error_config_import_version_mismatch">Version mismatch. The imported file has been created with a newer version. Import not possible.</string>
    <string name="text_dialog_general_error_config_export">An error occurred exporting the configuration.</string>
    <string name="text_dialog_general_error_synchronize_intervals">Fatal error synchronizing suspension intervals with database.</string>
</resources>
